still trying to fix alignment of origin princess

--- a/css/app.css
+++ b/css/app.css
@@ -348,7 +348,7 @@ a.ui-button:active,
 
 
 /* Origin of Princess Title */
-.origin-title h2 {
+.origin-game h2 {
 	margin-top: 2em;
     margin-left: 1.3em;
 }
